--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -1,16 +1,44 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 
 :root {
-  --primary: #0cb3cb;
+  --background: #fff;
   --text-primary: #333;
 }
 
 .dark {
-  --primary: #0cb3cb;
-  --text-primary: #ddd;
+  --background: #121212;
+  --text-primary: #eee;
+}
+
+body {
+  background-color: var(--background);
+  color: var(--text-primary);
 }
 
 @theme {
-  --color-primary: var(--primary);
-  --color-text-primary: var(--text-primary);
+}
+
+.theme-toggler svg {
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+.theme-toggler .sun-icon {
+  transform: rotate(0deg);
+  opacity: 1;
+}
+
+.theme-toggler .moon-icon {
+  transform: rotate(90deg);
+  opacity: 0;
+}
+
+.dark .theme-toggler .sun-icon {
+  transform: rotate(90deg);
+  opacity: 0;
+}
+
+.dark .theme-toggler .moon-icon {
+  transform: rotate(0deg);
+  opacity: 1;
 }
