feat: enhance Header component with dynamic title links; update Layout and DocsSidebar for improved structure and styling; add global scrollbar styles

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -58,6 +58,19 @@
   --carokann-secondary: #8c8cdd;
 }
 
+* {
+  outline: none;
+}
+
+body{
+ -ms-overflow-style: none;
+ }
+ 
+::-webkit-scrollbar {
+  display: none;
+}
+
+
 body, footer, header {
   background-color: var(--background);
   color: var(--text-primary);
