feat: Caro-Kann 미들웨어 페이지 추가 및 관련 번역 업데이트

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -58,14 +58,22 @@
   --carokann-secondary: #8c8cdd;
 }
 
+.link {
+  color: var(--carokann-secondary);
+}
+
+.link:hover {
+  color: var(--carokann-secondary);
+}
+
 * {
   outline: none;
 }
 
 body{
- -ms-overflow-style: none;
- }
- 
+  -ms-overflow-style: none;
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
